--- a/Alfred.Service/Alfred.Service.csproj
+++ b/Alfred.Service/Alfred.Service.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Alfred.Util\Alfred.Util.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CalElectChargesManage\" />
+  </ItemGroup>
+
 </Project>
