--- a/AlfredAdminLogin.WebApi/Properties/launchSettings.json
+++ b/AlfredAdminLogin.WebApi/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "WSL": {
       "commandName": "WSL2",
       "distributionName": ""
+    },
+    "配置文件 1": {
+      "commandName": "Executable",
+      "authenticationMode": "None"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
