添加 06_Test 对数据操作测试程序

--- a/Alfred.Entity/Alfred.Entity.csproj
+++ b/Alfred.Entity/Alfred.Entity.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Alfred.Web.Code\Alfred.Web.Code.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Business.Test\" />
+  </ItemGroup>
+
 </Project>
