--- a/AlfredAdminLogin/Properties/launchSettings.json
+++ b/AlfredAdminLogin/Properties/launchSettings.json
@@ -7,17 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WSL": {
-      "commandName": "WSL2",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://localhost:5000"
-      },
-      "distributionName": ""
-    },
-    "Alfred.Admin.Web": {
+    "AlfredAdminLogin": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
