--- a/Alfred.RedisCache.Test/Alfred.RedisCache.Test.csproj
+++ b/Alfred.RedisCache.Test/Alfred.RedisCache.Test.csproj
@@ -1,18 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Alfred.Entity\Alfred.Entity.csproj" />
+    <ProjectReference Include="..\Alfred.Cache.Factory\Alfred.Cache.Factory.csproj" />
     <ProjectReference Include="..\Alfred.Util\Alfred.Util.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Result\ElectChargesManage\" />
   </ItemGroup>
 
 </Project>
